fix cards container with flex-wrap option

--- a/my-tutor/src/app/home/home.component.css
+++ b/my-tutor/src/app/home/home.component.css
@@ -99,6 +99,7 @@
 .cards-list {
     padding: 2em 0;
     display: flex;
+    flex-wrap: wrap;
     gap: 1em;
-    justify-content: space-around;
+   justify-content: center;
 }
